fix: refactored; feat: docker added
