# auth_service/docs/swagger.json
@@ -32,7 +32,26 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/interceptors.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dtos.UserSignUpResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
             }
         },
         "/signup": {
@@ -63,7 +82,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dtos.UserSignUpResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/interceptors.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dtos.UserSignUpResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -135,6 +166,21 @@
                 },
                 "user_info": {
                     "$ref": "#/definitions/dtos.UserInfoResponse"
+                }
+            }
+        },
+        "interceptors.Response": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         }
