# auth_service/src/user/controllers/user-controller.go
@@ -1,7 +1,7 @@
 package controllers
 
 import (
-	"auth_service/src/shared/interceptors"
+	sharedDtos "auth_service/src/shared/dtos"
 	"auth_service/src/user/dtos"
 	"auth_service/src/user/services"
 	"fmt"
@@ -18,7 +18,7 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        request               body     dtos.UserSignUpRequest  true  "User SignUp Request"
-// @Success      201 				   {object} dtos.UserSignUpResponse
+// @Success      201 				   {object} sharedDtos.Response{data=dtos.UserSignUpResponse}
 // @Router       /signup [post]
 func SignUp() gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -27,17 +27,17 @@ func SignUp() gin.HandlerFunc {
 		var dto dtos.UserSignUpRequest
 
 		if err := c.ShouldBind(&dto); err != nil {
-			c.JSON(http.StatusBadRequest, interceptors.BuildErrorResponse("", err.Error(), nil))
+			c.JSON(http.StatusBadRequest, sharedDtos.BuildErrorResponse("", err.Error(), nil))
 		}
 
 		data, err := services.SignUp(c, dto)
 
 		if err != nil {
-			c.JSON(http.StatusForbidden, interceptors.BuildErrorResponse("", err.Error(), nil))
+			c.JSON(http.StatusForbidden, sharedDtos.BuildErrorResponse("", err.Error(), nil))
 			return
 		}
 
-		c.JSON(http.StatusCreated, interceptors.BuildResponse("SignUp success", data))
+		c.JSON(http.StatusCreated, sharedDtos.BuildResponse("SignUp success", data))
 	}
 }
 
@@ -49,22 +49,23 @@ func SignUp() gin.HandlerFunc {
 // @Accept       json
 // @Produce      json
 // @Param        request               body     dtos.UserLoginRequest  true  "User Login Request"
+// @Success      201 				   {object} sharedDtos.Response{data=dtos.UserSignUpResponse}
 // @Router       /login [post]
 func Login() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var dto dtos.UserLoginRequest
 
 		if err := c.ShouldBind(&dto); err != nil {
-			c.JSON(http.StatusBadRequest, interceptors.BuildErrorResponse("", err.Error(), nil))
+			c.JSON(http.StatusBadRequest, sharedDtos.BuildErrorResponse("", err.Error(), nil))
 		}
 
 		data, err := services.Login(c, dto)
 
 		if err != nil {
-			c.JSON(http.StatusNotFound, interceptors.BuildErrorResponse("", err.Error(), nil))
+			c.JSON(http.StatusNotFound, sharedDtos.BuildErrorResponse("", err.Error(), nil))
 			return
 		}
 
-		c.JSON(http.StatusCreated, interceptors.BuildResponse("Login success", data))
+		c.JSON(http.StatusCreated, sharedDtos.BuildResponse("Login success", data))
 	}
 }
